<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".activities.LoginActivity">


    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"></include>

    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/hint_forgetpass"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:weightSum="16">

        <EditText
            android:id="@+id/edittext_emailaddress"
            android:layout_width="0dp"
            android:layout_weight="12"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_edittext"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_emailaddress"
            android:inputType="textEmailAddress"
            android:padding="10sp"
            android:singleLine="true"
            android:textColor="@color/normalEditText"
            android:textColorHint="@color/hintEdittext"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="8dp"
            android:layout_marginLeft="10dp"
            android:paddingVertical="15dp"
            android:text="@string/btn_verify"
            android:background="@color/general"/>


    </LinearLayout>

    <TextView
        android:id="@+id/textview_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="@string/received_email" />


</LinearLayout>