<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".activities.LoginActivity">


    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"></include>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/hint_register"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:padding="10sp"
        android:singleLine="true"
        android:textColor="@color/normalEditText"
        android:textColorHint="@color/hintEdittext"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edittext_displayname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:hint="@string/hint_displayname"
        android:inputType="textPersonName"
        android:padding="10sp"
        android:textColor="@color/normalEditText"
        android:textColorHint="@color/hintEdittext"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edittext_emailaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:hint="@string/hint_emailaddress"
        android:inputType="textEmailAddress"
        android:padding="10sp"
        android:textColor="@color/normalEditText"
        android:textColorHint="@color/hintEdittext"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/edittext_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:hint="@string/hint_phoneno"
        android:inputType="number"
        android:padding="10sp"
        android:textColor="@color/normalEditText"
        android:textColorHint="@color/hintEdittext"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textColor="@color/normalEditText"
        android:textColorHint="@color/hintEdittext"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />


    <EditText
        android:id="@+id/edittext_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:hint="@string/hint_confirmpass"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textColor="@color/normalEditText"
        android:textColorHint="@color/hintEdittext"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">

        <TextView
            android:id="@+id/textview_dob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:layout_weight="4"
            android:background="@drawable/border_edittext"
            android:ems="10"
            android:padding="10sp"
            android:text="11/6/1997"
            android:textColor="@color/normalEditText"
            android:textColorHint="@color/hintEdittext"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <ImageButton
            android:id="@+id/btn_datepicker"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:background="@color/hintEdittext"
            />


        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_marginLeft="20dp"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/border_edittext"></Spinner>

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:background="@drawable/background_border_button"
        android:paddingVertical="15dp"
        android:drawableLeft="@drawable/ic_register"
        android:paddingHorizontal="20dp"
        android:text="@string/btn_register_text"
        android:textColor="#FFFFFF"
        android:textSize="16sp">
    </Button>

    <TextView
        android:id="@+id/textview_errormessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/error"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:text="Register failed, unhandled exception"/>

</LinearLayout>