<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_gray"
    tools:context=".activities.ChangePasswordActivity">


    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"></include>

    <EditText
        android:id="@+id/edittext_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:hint="@string/hint_current_pass"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textColor="@color/normalEditText"
        android:textColorHint="@color/hintEdittext"
        android:textSize="20sp"></EditText>


    <EditText
        android:id="@+id/edittext_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:hint="@string/hint_new_pass"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textColor="@color/normalEditText"
        android:textColorHint="@color/hintEdittext"
        android:textSize="20sp"></EditText>



    <EditText
        android:id="@+id/edittext_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
        android:background="@drawable/border_edittext"
        android:ems="10"
        android:hint="@string/hint_confirmpass"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textColor="@color/normalEditText"
        android:textColorHint="@color/hintEdittext"
        android:textSize="20sp"></EditText>


    <Button
        android:layout_gravity="center"
        android:id="@+id/btn_change_pass"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_login"
        android:drawablePadding="5dp"
        android:elevation="0dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/background_border_button"
        android:paddingVertical="15dp"
        android:text="@string/change_pass"
        android:textColor="#FFFFFF"
        android:textSize="16sp"></Button>

    <TextView
        android:id="@+id/textview_errormessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/error"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:text="Register failed, unhandled exception"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        style="?android:attr/progressBarStyle"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>